--- a/libs/shared-ui/styles.scss
+++ b/libs/shared-ui/styles.scss
@@ -1,3 +1,6 @@
-body {
-	background-color: red;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import 'src/lib/components/inputs/buttons/button';
+@import 'src/lib/components/text-display/anchors/style';
