fixed some issues

--- a/libs/shared-ui/styles.scss
+++ b/libs/shared-ui/styles.scss
@@ -3,4 +3,5 @@
 @tailwind utilities;
 
 @import 'src/lib/components/inputs/buttons/button';
+@import 'src/lib/components/inputs/checkbox/style';
 @import 'src/lib/components/text-display/anchors/style';
